log/build_2025-10-29_16-56-39/doctor_engine/stdout_stderr.log
running egg_info
writing ../../build/doctor_engine/doctor_engine.egg-info/PKG-INFO
writing dependency_links to ../../build/doctor_engine/doctor_engine.egg-info/dependency_links.txt
writing entry points to ../../build/doctor_engine/doctor_engine.egg-info/entry_points.txt
writing requirements to ../../build/doctor_engine/doctor_engine.egg-info/requires.txt
writing top-level names to ../../build/doctor_engine/doctor_engine.egg-info/top_level.txt
reading manifest file '../../build/doctor_engine/doctor_engine.egg-info/SOURCES.txt'
writing manifest file '../../build/doctor_engine/doctor_engine.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/anas/ros2_ws/install/doctor_engine/lib/python3.12/site-packages/doctor_engine/nodes/doctor_node.py to doctor_node.cpython-312.pyc
  File "/home/anas/ros2_ws/install/doctor_engine/lib/python3.12/site-packages/doctor_engine/nodes/doctor_node.py", line 24
    0.0, 5.0, 10.0, 15.0, 20.0, 25.0, 30.0, 35.0, 40.0, 45.0, 50.0, 55.0, 60.0, 65.0, 67.0, 67.0 67.0, 64.0, 60.0, 55.0, 50.0, 45.0, 40.0, 35.0, 
                                                                                            ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/anas/ros2_ws/install/doctor_engine/lib/python3.12/site-packages/doctor_engine-0.0.1-py3.12.egg-info' (and everything under it)
Copying ../../build/doctor_engine/doctor_engine.egg-info to /home/anas/ros2_ws/install/doctor_engine/lib/python3.12/site-packages/doctor_engine-0.0.1-py3.12.egg-info
running install_scripts
Installing doctor_mqtt_bridge script to /home/anas/ros2_ws/install/doctor_engine/lib/doctor_engine
Installing doctor_node script to /home/anas/ros2_ws/install/doctor_engine/lib/doctor_engine
writing list of installed files to '/home/anas/ros2_ws/build/doctor_engine/install.log'
